--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         style="width:100%;max-width:960px"></div>
 
     <p>This is the first file in my new Git Repo.</p>
-    <p>A new line in our file!</p>
+    <p>This line is here to show how merging works.</p>
 
     <div><img src="gambar1.png" alt="gambar from space"
     style="width:100%;max-width:960px"></div>
