--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <p>This is the first file in my new Git Repo.</p>
     <p>This line is here to show how merging works.</p>
+    <h2>Learning Git and GitHub</h2>
 
     <div><img src="gambar1.png" alt="gambar from space"
     style="width:100%;max-width:640px"></div>
